--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -1,116 +1,3 @@
-* {
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-*,
-*:before,
-*:after {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-:focus,
-:active {
-	outline: none;
-}
-a:focus,
-a:active {
-	outline: none;
-}
-
-nav,
-footer,
-header,
-aside {
-	display: block;
-}
-
-html,
-body {
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 1;
-	font-size: 14px;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-input,
-button,
-textarea {
-	font-family: inherit;
-}
-
-input::-ms-clear {
-	display: none;
-}
-button {
-	cursor: pointer;
-}
-button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
-}
-a,
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: none;
-}
-ul li {
-	list-style: none;
-}
-img {
-	vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-size: inherit;
-	font-weight: 400;
-}
-@mixin hoverLink($hoverColor, $top) {
-	display: inline-block;
-	line-height: 1;
-	cursor: pointer;
-	transition: all 0.3s ease-in-out;
-	position: relative;
-	&:hover {
-		color: $hoverColor;
-	}
-	&:after {
-		position: absolute;
-		top: $top + 4px;
-		background-color: #f7c356; /* Цвет линии при наведении на нее курсора мыши */
-		display: block;
-		content: "";
-		height: 1px; /* Высота линии */
-		width: 0%;
-		-webkit-transition: width 0.3s ease-in-out;
-		-moz--transition: width 0.3s ease-in-out;
-		transition: width 0.3s ease-in-out;
-	}
-	&:hover:after,
-	&:focus:hover {
-		width: 100%;
-	}
-}
-body {
-	// font-family: 'Open Sans', sans-serif;
-	font-family: "Roboto", sans-serif;
-	background-color: #0e0e0e;
-}
-.container {
-	max-width: 1200px;
-	margin: 0 auto;
-}
 .sort {
 	color: #ffffff;
 	font-size: 20px;
@@ -120,14 +7,13 @@ body {
 	&::after {
 		content: "";
 		position: absolute;
-		background-image: url(../img/movies/arrowDown.svg);
+		background-image: url(../assets/img/movies/arrowDown.svg);
 		width: 13px;
 		height: 8px;
 		top: 13px;
 		right: 13px;
 	}
 }
-@import "./header.scss";
 .movies {
 	&__date {
 		margin: 48px 30px 0px 0px;
@@ -147,7 +33,7 @@ body {
 		grid-template-columns: 223px 223px 223px 223px 223px;
 		column-gap: 20px;
 		row-gap: 48px;
-		margin: 48px 0px 40px 0px;
+		padding: 48px 0px 40px 0px;
 	}
 	&__block {
 		border-radius: 12px;
@@ -173,4 +59,3 @@ body {
 		}
 	}
 }
-@import "./footer";
