--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -17,41 +17,56 @@
 .movies {
 	&__date {
 		margin: 48px 30px 0px 0px;
-		display: inline-block;
-		padding: 6px 80px 6px 16px;
-		border: 1px solid #ffffff;
-		border-radius: 8px;
-	}
-	&__genre{
+		position: relative;
 		display: inline-block;
 		&-btn {
 			display: inline-block;
+			padding: 6px 80px 6px 16px;
+			border: 1px solid #ffffff;
+			border-radius: 8px;
+		}
+	}
+	&__genre {
+		display: inline-block;
+		position: relative;
+		&-btn {
 			padding: 6px 80px 6px 17px;
 			border: 1px solid #ffffff;
 			border-radius: 8px;
-			position: relative;
-			width:212px;
+			width: 212px;
 			text-align: start;
 		}
 	}
-
-	&__list{
+	.sort__popup {
 		position: absolute;
-		z-index: 2;
 		top: 48px;
 		left: 0;
-		padding: 12px 78px 20px 17px;
+		z-index: 2;
+		width: 100%;
+	}
+	.date-menu {
+		top: 55px;
+	}
+	&__list {
+		width: 100%;
+		padding: 12px 0px 20px 17px;
+		display: inline-block;
 		border-radius: 8px;
 		border: 1px solid #ffffff;
-		display: inline-block;
-		background-color: #0E0E0E;
-		width:212px;
-		&-link{
-			color:#ffffff;
-			font-size: 20px;
-			line-height: 23px;
+		background-color: #0e0e0e;
+		&-link {
 			padding-bottom: 9px;
-			
+			text-align: start;
+			span {
+				white-space: nowrap;
+				color: #ffffff;
+				font-size: 20px;
+				line-height: 23px;
+				cursor: pointer;
+			}
+			span:hover {
+				color: #f7c356;
+			}
 		}
 	}
 	&__row {
