--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -14,6 +14,26 @@
 		right: 13px;
 	}
 }
+.movie__div {
+	border-radius: 14px;
+	overflow: hidden;
+	position: relative;
+	&:after {
+		display: none;
+		position: absolute;
+		content: "";
+		width: 100%;
+		height: 100%;
+		background-color: #000000;
+		top: 0;
+		left: 0;
+	}
+	&:hover:after {
+		cursor: pointer;
+		display: block;
+		opacity: 0.5;
+	}
+}
 .movies {
 	&__date {
 		margin: 48px 30px 0px 0px;
@@ -79,24 +99,9 @@
 	&__block {
 		border-radius: 12px;
 		overflow: hidden;
-		position: relative;
 		// border: 1px solid #ffffff;
 		img {
 			max-width: 100%;
-		}
-		&:after {
-			display: none;
-			position: absolute;
-			content: "";
-			width: 100%;
-			height: 100%;
-			background-color: #000000;
-			top: 0;
-			left: 0;
-		}
-		&:hover:after {
-			display: block;
-			opacity: 0.5;
 		}
 	}
 }
