--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -196,6 +196,7 @@ main {
 		justify-content: space-between;
 		transition: transform 300ms ease-in-out;
 		&_block {
+			border-radius: 14px;
 			margin-right: 20px;
 			overflow: hidden;
 			position: relative;
