--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -15,22 +15,9 @@
 	}
 }
 .movie__div {
-	border-radius: 14px;
-	&:after {
-		display: none;
-		position: absolute;
-		content: "";
-		width: 100%;
-		height: 100%;
-		background-color: #000000;
-		top: 0;
-		left: 0;
-	}
-	&:hover:after {
-		cursor: pointer;
-		display: block;
-		opacity: 0.5;
-	}
+	height: 412px;
+	min-width: 217px;
+	max-width: 217px;
 }
 .movies {
 	&__date {
