сделал фильтрацию фильмов по жанру, а также добавил анимацию отображения названия фильма при наведении на его карточку

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -10,6 +10,10 @@
 		align-items: center;
 		a {
 			color: #ffffff;
+			transition: all 0.25s ease-in;
+			&:hover {
+				color: #f7c356;
+			}
 		}
 	}
 	&__approval {
