--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -212,10 +212,10 @@ main {
 				top: 0;
 				left: 0;
 			}
-			&:hover:after {
-				display: block;
-				opacity: 0.5;
-			}
+			// &:hover:after {
+			// 	display: block;
+			// 	opacity: 0.5;
+			// }
 		}
 	}
 }
