--- a/src/scss/oneMovie.scss
+++ b/src/scss/oneMovie.scss
@@ -170,13 +170,15 @@ h6 {
 	}
 	&__image {
 		width: 260px;
-		height: 380px;
+		height: 412px;
 		border-radius: 12px;
 		overflow: hidden;
 		border: 1px solid #ffffff;
 		margin-bottom: 28px;
 		img {
-			max-width: 100%;
+			width: 100%;
+			max-height: 100%;
+			object-fit: cover;
 		}
 	}
 	&__rating {
@@ -208,7 +210,7 @@ h6 {
 	}
 	&__description {
 		font-size: 20px;
-		line-height: 23px;
+		line-height: 26px;
 		margin-bottom: 18px;
 	}
 	&__button {
