--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Inconsolata:700");
 .header {
 	background-color: #000000;
 	padding: 28px 0px;
@@ -42,6 +43,123 @@
 		}
 		.search {
 			margin-right: 16px;
+		}
+	}
+}
+
+.search {
+	position: relative;
+}
+
+.container_search {
+	position: absolute;
+	margin: auto;
+	top: 0;
+	left: -270px;
+	right: 0;
+	bottom: 0;
+	width: 280px;
+	height: 50px;
+	.search-btn {
+		position: absolute;
+		margin: auto 0px auto auto;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 45px;
+		height: 45px;
+		border-radius: 50%;
+		transition: all 1s;
+		z-index: 4;
+		box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+		// box-shadow: 0 0 25px 0 crimson;
+		&:hover {
+			cursor: pointer;
+		}
+		&::before {
+			content: "";
+			position: absolute;
+			margin: auto;
+			top: 16px;
+			right: 0;
+			bottom: 0;
+			left: 16px;
+			width: 12px;
+			height: 2px;
+			background: white;
+			transform: rotate(45deg);
+			transition: all 0.5s;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			margin: auto;
+			top: -5px;
+			right: 0;
+			bottom: 0;
+			left: -5px;
+			width: 18px;
+			height: 18px;
+			border-radius: 50%;
+			border: 2px solid white;
+			transition: all 0.5s;
+		}
+	}
+	input {
+		font-family: "Inconsolata", monospace;
+		position: absolute;
+		margin: auto 1px auto auto;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 20px;
+		height: 35px;
+		outline: none;
+		border: none;
+		// border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+		color: #707070;
+
+		padding: 0 80px 0 20px;
+		border-radius: 30px;
+		// box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
+		transition: all 1s;
+		opacity: 0;
+		z-index: 5;
+		font-weight: bolder;
+		letter-spacing: 0.1em;
+		&:hover {
+			cursor: pointer;
+		}
+		&:focus {
+			width: 280px;
+			opacity: 1;
+			cursor: text;
+		}
+		&:focus ~ .search-btn {
+			background: #151515;
+			z-index: 6;
+			&::before {
+				top: 0;
+				left: 0;
+				width: 25px;
+			}
+			&::after {
+				top: 0;
+				left: 0;
+				width: 25px;
+				height: 2px;
+				border: none;
+				background: white;
+				border-radius: 0%;
+				transform: rotate(-45deg);
+			}
+		}
+		&::placeholder {
+			color: #707070;
+			opacity: 0.5;
+			font-weight: bolder;
 		}
 	}
 }
