--- a/src/scss/personalAccount.scss
+++ b/src/scss/personalAccount.scss
@@ -1,4 +1,3 @@
-
 .avatar__title {
 	font-size: 32px;
 	line-height: 38px;
@@ -48,7 +47,6 @@
 		}
 		&-slider {
 			display: flex;
-			justify-content: space-between;
 		}
 		margin-bottom: 32px;
 	}
@@ -58,7 +56,6 @@
 		}
 		&-slider {
 			display: flex;
-			justify-content: space-between;
 		}
 	}
 	&__block {
@@ -68,23 +65,15 @@
 		overflow: hidden;
 		position: relative;
 		border: 1px solid #ffffff;
+		margin-right: 20px;
+		&:hover .movie__hover {
+			opacity: 1;
+			transition: 0.6s;
+		}
 		img {
-			max-width: 100%;
-		}
-		&:after {
-			display: none;
-			position: absolute;
-			content: "";
 			width: 100%;
-			height: 100%;
-			background-color: #000000;
-			top: 0;
-			left: 0;
-		}
-		&:hover:after {
-			display: block;
-			opacity: 0.5;
+			max-height: 100%;
+			object-fit: cover;
 		}
 	}
 }
-
