--- a/src/scss/personalAccount.scss
+++ b/src/scss/personalAccount.scss
@@ -47,8 +47,9 @@
 		}
 		&-slider {
 			display: flex;
+			justify-content: center;
+			padding-bottom: 32px;
 		}
-		margin-bottom: 32px;
 	}
 	&__watched {
 		&-title {
@@ -56,6 +57,8 @@
 		}
 		&-slider {
 			display: flex;
+			justify-content: center;
+			padding-bottom: 32px;
 		}
 	}
 	&__block {
@@ -74,6 +77,37 @@
 			width: 100%;
 			max-height: 100%;
 			object-fit: cover;
+		}
+	}
+	&__empty-slider {
+		border: 1px solid #ffffff;
+		padding: 10px;
+		border-radius: 20px;
+		.empty__slider-one,
+		.empty__slider-two {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.empty__slider-text {
+			font-size: 21px;
+			text-align: center;
+		}
+		.empty__slider-cat {
+			margin-left: 7px;
+			width: 30px;
+			height: 30px;
+			img {
+				width: 100%;
+				height: 100%;
+			}
+		}
+		.empty__slider-svg {
+			cursor: pointer;
+			width: 28px;
+			height: 28px;
+			margin-left: 4px;
+			fill: #f7c356;
 		}
 	}
 }
