--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -106,6 +106,10 @@
 			width: 20px;
 			height: 20px;
 			color: #fff;
+			fill: #ffffff;
+			&:hover {
+				fill: #000;
+			}
 		}
 		span {
 			margin-right: 12px;
