сделал слайдер баннер-изобюражений на главной странице

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -122,15 +122,26 @@ main {
 	background-color: #0e0e0e;
 }
 .banner {
-	padding: 150px 0px 169px 0px;
-	background-image: url(../assets/img/banner/backImage.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
+	padding: 150px 0px 300px 0px;
+	position: relative;
+	&__carousel {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 0;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		.bhHnmT {
+			margin: 0px;
+		}
+	}
 	&__inner {
 		display: flex;
 		align-items: flex-end;
 		flex-direction: column;
 		&-info {
+			z-index: 1;
 			max-width: 600px;
 		}
 	}
@@ -165,6 +176,16 @@ main {
 			background-color: #f7c356;
 			color: #ffffff;
 		}
+	}
+	&::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #000;
+		opacity: 0.5;
 	}
 }
 .compilation {
