--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -14,6 +14,11 @@
 			width: 100%;
 		}
 	}
+	&__signin{
+		color:#ffffff;
+		font-size: 16px;
+		@include hoverLink(#f7c356, 16px)
+	}
 	&__menu {
 		display: flex;
 		justify-content: space-between;
