--- a/src/scss/personalAccount.scss
+++ b/src/scss/personalAccount.scss
@@ -1,113 +1,194 @@
 .avatar__title {
-	font-size: 32px;
-	line-height: 38px;
-	font-weight: 700;
-	color: #ffffff;
+  font-size: 32px;
+  line-height: 38px;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .person {
-	padding: 48px 0px 70px 0px;
-	&__row {
-		display: flex;
-		margin-bottom: 48px;
-	}
-	&__block-img {
-		flex: 0 0 282px;
-		height: 282px;
-		border-radius: 20px;
-		background-color: #d9d9d9;
-		margin-right: 24px;
-		position: relative;
-		&::after {
-			position: absolute;
-			content: "";
-			background-image: url(../assets/img/personalAcc/avatar.svg);
-			width: 153px;
-			height: 173px;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-		}
-	}
-	&__info {
-		&-name {
-			font-size: 32px;
-			font-weight: 700;
-			line-height: 38px;
-		}
-		&-mail {
-			font-size: 20px;
-			line-height: 23px;
-			color: #ffffff;
-		}
-	}
-	&__compilation {
-		&-title {
-			margin-bottom: 30px;
-		}
-		&-slider {
-			display: flex;
-			justify-content: center;
-			padding-bottom: 32px;
-		}
-	}
-	&__watched {
-		&-title {
-			margin-bottom: 30px;
-		}
-		&-slider {
-			display: flex;
-			justify-content: center;
-			padding-bottom: 32px;
-		}
-	}
-	&__block {
-		border-radius: 12px;
-		width: 223px;
-		height: 220px;
-		overflow: hidden;
-		position: relative;
-		border: 1px solid #ffffff;
-		margin-right: 20px;
-		&:hover .movie__hover {
-			opacity: 1;
-			transition: 0.6s;
-		}
-		img {
-			width: 100%;
-			max-height: 100%;
-			object-fit: cover;
-		}
-	}
-	&__empty-slider {
-		border: 1px solid #ffffff;
-		padding: 10px;
-		border-radius: 20px;
-		.empty__slider-one,
-		.empty__slider-two {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
-		.empty__slider-text {
-			font-size: 21px;
-			text-align: center;
-		}
-		.empty__slider-cat {
-			margin-left: 7px;
-			width: 30px;
-			height: 30px;
-			img {
-				width: 100%;
-				height: 100%;
-			}
-		}
-		.empty__slider-svg {
-			cursor: pointer;
-			width: 28px;
-			height: 28px;
-			margin-left: 4px;
-			fill: #f7c356;
-		}
-	}
+  padding: 48px 0px 70px 0px;
+  &__row {
+    display: flex;
+    margin-bottom: 48px;
+  }
+  &__block-img {
+    flex: 0 0 282px;
+    height: 282px;
+    border-radius: 20px;
+    background-color: #d9d9d9;
+    margin-right: 24px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      background-image: url(../assets/img/personalAcc/avatar.svg);
+      width: 153px;
+      height: 173px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+    &-name {
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 38px;
+    }
+    &-mail {
+      font-size: 20px;
+      line-height: 23px;
+      color: #ffffff;
+    }
+  }
+  &__compilation {
+    &-title {
+      margin-bottom: 30px;
+    }
+    &-slider {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 32px;
+    }
+  }
+  &__watched {
+    &-title {
+      margin-bottom: 30px;
+    }
+    &-slider {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 32px;
+    }
+  }
+  &__block {
+    border-radius: 12px;
+    width: 223px;
+    height: 220px;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid #ffffff;
+    margin-right: 20px;
+    &:hover .movie__hover {
+      opacity: 1;
+      transition: 0.6s;
+    }
+    img {
+      width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__empty-slider {
+    border: 1px solid #ffffff;
+    padding: 10px;
+    border-radius: 20px;
+    .empty__slider-one,
+    .empty__slider-two {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .empty__slider-text {
+      font-size: 21px;
+      text-align: center;
+    }
+    .empty__slider-cat {
+      margin-left: 7px;
+      width: 30px;
+      height: 30px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .empty__slider-svg {
+      cursor: pointer;
+      width: 28px;
+      height: 28px;
+      margin-left: 4px;
+      fill: #f7c356;
+    }
+  }
+}
+.admin__btn {
+  margin-top: 20px;
+  display: inline-block;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 17px 36px 17px 36px;
+  border: 2px solid #f9cd5c;
+  border-radius: 16px;
+  background: transparent;
+  color: #f9cd5c;
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    background-color: #f7c356;
+    color: #ffffff;
+  }
+}
+.modal-overlay {
+  z-index: 9999;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-form {
+  background-color: #0e0e0e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 550px;
+  min-height: 600px;
+  border: 2px solid #ffffff;
+  border-radius: 12px;
+}
+.modal-group {
+  position: relative;
+  margin-bottom: 45px;
+}
+.modal-input {
+  background-color: #0e0e0e;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 300px;
+  border: none;
+  border-bottom: 1px solid #ffffff;
+  &:focus {
+    outline: none;
+  }
+}
+.modal-label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+.modal-input:focus ~ .modal-label {
+  top: -20px;
+  font-size: 14px;
+  color: #f7c356;
+}
+.modal-input:valid:not(:placeholder-shown) ~ .modal-label {
+  top: -20px;
+  font-size: 14px;
+  color: #f7c356;
 }
