создание асинхронного action в redux

--- a/src/scss/movies.scss
+++ b/src/scss/movies.scss
@@ -38,6 +38,7 @@
 			padding: 6px 80px 6px 16px;
 			border: 1px solid #ffffff;
 			border-radius: 8px;
+			cursor: pointer;
 		}
 	}
 	&__genre {
@@ -49,6 +50,7 @@
 			border-radius: 8px;
 			width: 212px;
 			text-align: start;
+			cursor: pointer;
 		}
 	}
 	.sort__popup {
